# costmap_prohibition_layer

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  costmap_plugins.xml  package.xml
cfg/: CostmapProhibitionLayer.cfg
include/costmap_prohibition_layer/: costmap_prohibition_layer.h
msg/: ProhibitionAreas.msg
src/: costmap_prohibition_layer.cpp
