<?xml version="1.0"?>
<package>
  <name>costmap_prohibition_layer</name>
  <version>0.0.5</version>
  <description>ROS-Package that implements a costmap layer to add prohibited areas to the costmap-2D by a user configuration.</description>

  <maintainer email="stephan.kurzawe@tu-dortmund.de">Stephan Kurzawe</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/costmap_prohibition_layer</url> -->


  <author email="stephan.kurzawe@tu-dortmund.de">Stephan Kurzawe</author>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>


  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>

</package>
